--- a/src/XYS.Standard.Mail/XYS.Standard.Mail.csproj
+++ b/src/XYS.Standard.Mail/XYS.Standard.Mail.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AliCloud\" />
+    <Folder Include="AliCloud\Apis\" />
+    <Folder Include="AliCloud\Models\Request\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AlibabaCloud.SDK.Dm20151123" Version="1.0.5" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
