--- a/src/XYS.Standard.Mail/XYS.Standard.Mail.csproj
+++ b/src/XYS.Standard.Mail/XYS.Standard.Mail.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="AliCloud\Apis\" />
-    <Folder Include="AliCloud\Models\Request\" />
+    <Folder Include="AliCloud\Models\Responses\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
   <ItemGroup>
